--- a/angular.json
+++ b/angular.json
@@ -28,18 +28,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "./src/assets/scss/styles.scss"
             ],
             "scripts": []
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -48,8 +46,7 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "budgets": [
-                {
+              "budgets": [{
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
@@ -123,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "mean-rsvp"
+    }
+  },
+  "defaultProject": "mean-rsvp",
+  "cli": {
+    "analytics": "ff2ff736-b67d-499d-8ca2-77ec6c3fd4f4"
+  }
 }
