--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "auth0-js": "^9.14.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^1.10.1",
