--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,20 @@
 */
 {
   "files": [],
-  "references": [
-    {
+  "references": [{
       "path": "./tsconfig.app.json"
     },
     {
       "path": "./tsconfig.spec.json"
     }
-]
+  ],
+
+
+
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "allowJs": true,
+    "emitDecoratorMetadata": true,
+  }
+
 }
